...
          RatingView(rating: $rating)
            .frame(height: 30)
        } header: {
          Text("Write a review")
        }
        Section {
          Button(filmReview != nil ? "Update" : "Save") {
            saveFilmReview()
          }
        }
      }
    }
    .navigationTitle("Add a film review")
...
